--- a/src/Components/Connect/Connect.module.css
+++ b/src/Components/Connect/Connect.module.css
@@ -120,11 +120,14 @@
 
 @media screen and (max-width: 820px) {
   .ConnectWrapper {
-    padding: 0vh 6vw 5vh;
+    padding: 8vh 6vw 5vh;
+  
+
   }
 
   .innerContent h2 {
     font-size: 24px;
+
   }
 
   .socialMedia {
